fix:Question mark align

--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -263,7 +263,6 @@ ul {
 }
 .slackid-container {
 	display: flex;
-	align-items: center;
 }
 .slackid-container .question-mark {
 	cursor: pointer;
